# cm-advanced-search

./: .gitignore  CMakeLists.txt  README.md
include/: club.h  club_repository.h  entity.h  first_name.h  first_name_repository.h  index.h  index_repository.h  non_player.h  player.h  repository.h  second_name.h  staff.h  staff_repository.h
include/enums/: job_for_club.h  playing_squad.h  staff_classification.h
src/: club_repository.cpp  dat_probe.cpp  first_name_repository.cpp  index_repository.cpp  main.cpp  read_club_dat.cpp  read_club_staff.cpp  read_staff_dat.cpp  staff_repository.cpp
